# code-signature-tool

./: .gitignore  FOR_LLMS.md  QUICKSTART.md  README.md  install.sh  pyproject.toml
docs/: DESIGN.md
examples/: .signature.json
examples/sample_files/: example.js  example.md  example.py
hooks/: pre-commit
src/signature_tool/: __init__.py  cli.py  config.py  generator.py  processor.py
